[460028] Surrogate query support
  Added initial support in builder
  Added surrogate annotation, extension point, validator and generator

Change-Id: I81fd1076c34b6fd0af0f64843f2490e398ed6898
Signed-off-by: Abel Hegedus <abel.hegedus@mit.bme.hu>
Signed-off-by: Zoltan Ujhelyi <ujhelyiz@mit.bme.hu>

--- a/plugins/org.eclipse.incquery.patternlanguage.emf/plugin.xml
+++ b/plugins/org.eclipse.incquery.patternlanguage.emf/plugin.xml
@@ -2,7 +2,7 @@
 <?eclipse version="3.0"?>
 
 <plugin>
-
+  <extension-point id="surrogatequeryemf" name="EMF-IncQuery Surrogate Query" schema="schema/surrogatequeryemf.exsd"/>
   <extension point="org.eclipse.emf.ecore.generated_package">
     <package 
        uri = "http://www.eclipse.org/incquery/patternlanguage/emf/EMFPatternLanguage" 
