--- a/plugins/org.eclipse.incquery.patternlanguage.emf/build.properties
+++ b/plugins/org.eclipse.incquery.patternlanguage.emf/build.properties
@@ -5,7 +5,8 @@ bin.includes = model/,\
                META-INF/,\
                .,\
                plugin.xml,\
-               about.html
+               about.html,\
+               schema/
 jars.extra.classpath = platform:/plugin/org.eclipse.emf.mwe2.launch,\
 					   platform:/plugin/org.eclipse.emf.mwe.utils,\
 					   platform:/plugin/org.eclipse.emf.codegen.ecore,\
