Added integration tests to the parent pom
Change-Id: I0debdfde9b64ed80e94c653f7d63ecad6bb523cd
Signed-off-by: Istvan David <davidi@inf.mit.bme.hu>

--- a/releng/org.eclipse.viatra.parent/pom.xml
+++ b/releng/org.eclipse.viatra.parent/pom.xml
@@ -192,6 +192,7 @@
 				<module>../../plugins/org.eclipse.viatra.dse.genetic</module>
 				<module>../../plugins/org.eclipse.viatra.dse.monitor</module>
 				<module>../../tests/org.eclipse.viatra.cep.vepl.tests</module>
+				<module>../../tests/org.eclipse.viatra.cep.tests.integration</module>
 				<module>../../features/org.eclipse.viatra.emf.runtime.feature</module>
 				<module>../../features/org.eclipse.viatra.cep.feature</module>
 				<module>../../features/org.eclipse.viatra.dse.feature</module>
