--- a/plugins/org.eclipse.viatra.cep.core.metamodels/build.properties
+++ b/plugins/org.eclipse.viatra.cep.core.metamodels/build.properties
@@ -1,9 +1,8 @@
-#
-
 bin.includes = .,\
                META-INF/,\
                plugin.xml,\
                plugin.properties
 jars.compile.order = .
-source.. = src/
+source.. = src/,\
+           src-gen/
 output.. = bin/
