--- a/plugins/org.eclipse.viatra.cep.core.metamodels/pom.xml
+++ b/plugins/org.eclipse.viatra.cep.core.metamodels/pom.xml
@@ -35,12 +35,12 @@
 					<outputDirectory>src-gen</outputDirectory>
 					<metamodels>
 						<metamodel>
-							<packageClass>src/org.eclipse.viatra.cep.core.metamodels.events.EventsPackage</packageClass>
-							<genmodelUri>models/InternalModel.genmodel</genmodelUri>
+							<packageClass>org.eclipse.viatra.cep.core.metamodels.events.EventsPackage</packageClass>
+							<genmodelUri>/models/InternalModel.genmodel</genmodelUri>
 						</metamodel>
 						<metamodel>
-							<packageClass>src/org.eclipse.viatra.cep.core.metamodels.automaton.AutomatonPackage</packageClass>
-							<genmodelUri>models/InternalModel.genmodel</genmodelUri>
+							<packageClass>org.eclipse.viatra.cep.core.metamodels.automaton.AutomatonPackage</packageClass>
+							<genmodelUri>/models/InternalModel.genmodel</genmodelUri>
 						</metamodel>
 					</metamodels>
 				</configuration>
