--- a/plugins/org.eclipse.viatra.cep.core.metamodels/pom.xml
+++ b/plugins/org.eclipse.viatra.cep.core.metamodels/pom.xml
@@ -10,4 +10,14 @@
   </parent>
   <artifactId>org.eclipse.viatra.cep.core.metamodels</artifactId>
   <packaging>eclipse-plugin</packaging>
+  <build>
+		<resources>
+			<resource>
+				<directory>src</directory>
+			</resource>
+			<resource>
+				<directory>src-gen</directory>
+			</resource>
+		</resources>
+  </build>		
 </project>
