[461352] Added fragment dependencies to build.properties

--- a/plugins/org.eclipse.incquery.patternlanguage.emf/build.properties
+++ b/plugins/org.eclipse.incquery.patternlanguage.emf/build.properties
@@ -10,5 +10,6 @@ bin.includes = model/,\
 jars.extra.classpath = platform:/plugin/org.eclipse.emf.mwe2.launch,\
 					   platform:/plugin/org.eclipse.emf.mwe.utils,\
 					   platform:/plugin/org.eclipse.emf.codegen.ecore,\
-					   platform:/plugin/org.eclipse.xtext.generator
+					   platform:/plugin/org.eclipse.xtext.generator,\
+					   platform:/fragment/com.google.inject.multibindings
 					   
