--- a/plugins/org.eclipse.incquery.patternlanguage.emf.ui/build.properties
+++ b/plugins/org.eclipse.incquery.patternlanguage.emf.ui/build.properties
@@ -6,4 +6,4 @@ bin.includes = META-INF/,\
                icons/,\
                templates/,\
                about.html
-
+jars.extra.classpath = platform:/fragment/com.google.inject.multibindings
