--- a/releng/org.eclipse.incquery.parent/pom.xml
+++ b/releng/org.eclipse.incquery.parent/pom.xml
@@ -257,6 +257,7 @@
 				<module>../../plugins/org.eclipse.incquery.runtime.gmf</module>
 				<module>../../plugins/org.eclipse.incquery.runtime.graphiti</module>
 				<module>../../plugins/org.eclipse.incquery.databinding.runtime</module>
+				<module>../../plugins/org.eclipse.incquery.uml</module>
 				<module>../../plugins/org.eclipse.incquery.validation.core</module>
 				<module>../../plugins/org.eclipse.incquery.validation.runtime</module>
 				<module>../../plugins/org.eclipse.incquery.validation.runtime.ui</module>
