[458230] Updated clean settings to keep .gitignore files in generated folders

--- a/plugins/org.eclipse.incquery.querybasedfeatures.tooling/pom.xml
+++ b/plugins/org.eclipse.incquery.querybasedfeatures.tooling/pom.xml
@@ -28,8 +28,7 @@
 						<fileset>
 							<directory>xtend-gen</directory>
 							<excludes>
-								<exclude>keep.txt</exclude>
-								<exclude>.keep.txt</exclude>
+								<exclude>.gitignore</exclude>
 							</excludes>
 						</fileset>
 					</filesets>
