--- a/plugins/org.eclipse.incquery.tooling.generator.model/pom.xml
+++ b/plugins/org.eclipse.incquery.tooling.generator.model/pom.xml
@@ -20,18 +20,33 @@
 					<filesets>
 						<fileset>
 							<directory>src-gen</directory>
+                                                        <excludes>
+                                                                <exclude>.gitignore</exclude>
+                                                        </excludes>
 						</fileset>
 						<fileset>
 							<directory>xtend-gen</directory>
+                                                        <excludes>
+                                                                <exclude>.gitignore</exclude>
+                                                        </excludes>
 						</fileset>
 						<fileset>
 							<directory>model/generated</directory>
+                                                        <excludes>
+                                                                <exclude>.gitignore</exclude>
+                                                        </excludes>
 						</fileset>
 						<fileset>
 							<directory>../${project.artifactId}.ui/src-gen</directory>
+                                                        <excludes>
+                                                                <exclude>.gitignore</exclude>
+                                                        </excludes>
 						</fileset>
 						<fileset>
 							<directory>../../tests/${project.artifactId}.tests/src-gen</directory>
+                                                        <excludes>
+                                                                <exclude>.gitignore</exclude>
+                                                        </excludes>
 						</fileset>
 					</filesets>
 				</configuration>
