--- a/tests/org.eclipse.incquery.testing.core/pom.xml
+++ b/tests/org.eclipse.incquery.testing.core/pom.xml
@@ -29,8 +29,7 @@
 						<fileset>
 							<directory>xtend-gen</directory>
 							<excludes>
-								<exclude>keep.txt</exclude>
-								<exclude>.keep.txt</exclude>
+								<exclude>.gitignore</exclude>
 							</excludes>
 						</fileset>
 					</filesets>
