--- a/tests/org.eclipse.incquery.testing.queries/pom.xml
+++ b/tests/org.eclipse.incquery.testing.queries/pom.xml
@@ -27,9 +27,9 @@
 							<filesets>
 								<fileset>
 									<directory>src-gen</directory>
-									<includes>
-										<include>**/*</include>
-									</includes>
+                                                        		<excludes>
+                                                                		<exclude>.gitignore</exclude>
+                                                        		</excludes>
 								</fileset>
 							</filesets>
 						</configuration>
