[414824] Implement majority of UML derived features (Mark well-behaving features as such, write surrogate query for others)

--- a/releng/org.eclipse.incquery.parent/pom.xml
+++ b/releng/org.eclipse.incquery.parent/pom.xml
@@ -276,6 +276,7 @@
 				<module>../../tests/org.eclipse.incquery.testing.core</module>
 				<module>../../tests/org.eclipse.incquery.testing.queries</module>
 				<module>../../tests/org.eclipse.incquery.testing.ui</module>
+                <module>../../tests/org.eclipse.incquery.uml.test</module>
 				<module>../../features/org.eclipse.incquery.runtime.feature</module>
 				<module>../../features/org.eclipse.incquery.runtime.generic.feature</module>
 				<module>../../features/org.eclipse.incquery.runtime.localsearch.feature</module>
