--- a/plugins/org.eclipse.incquery.runtime.graphiti/pom.xml
+++ b/plugins/org.eclipse.incquery.runtime.graphiti/pom.xml
@@ -10,4 +10,5 @@
 	</parent>
   <artifactId>org.eclipse.incquery.runtime.graphiti</artifactId>
   <packaging>eclipse-plugin</packaging>
+  <version>0.10.0-SNAPSHOT</version>
 </project>
