--- a/plugins/org.eclipse.incquery.viewers.tooling.ui.zest/pom.xml
+++ b/plugins/org.eclipse.incquery.viewers.tooling.ui.zest/pom.xml
@@ -11,4 +11,5 @@
 	</parent>
 	<artifactId>org.eclipse.incquery.viewers.tooling.ui.zest</artifactId>
 	<packaging>eclipse-plugin</packaging>
+	<version>0.10.0-SNAPSHOT</version>
 </project>
